# goosey

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: main.gosling  vector.gosling
src/: main.rs
src/file/: identifier.rs  mod.rs  source_file.rs  trace.rs
src/ir/: mod.rs  visibility.rs
src/lexer/: keyword.rs  lexer.rs  mod.rs  test.rs  token.rs
src/parser/: error.rs  mod.rs  parser.rs  parser_module.rs  test.rs
src/parser/ast/: data.rs  expression.rs  function.rs  mod.rs  operations.rs  struct.rs  top_level.rs
src/parser/modules/: expression_parser.rs  mod.rs  statement_parser.rs  top_level.rs
src/validation/: data_type.rs  error.rs  function_context.rs  mod.rs  module.rs  tests.rs
src/validation/registry/: expression.rs  functions.rs  mod.rs  structs.rs  variable.rs
std/: box.gs  option.gs  result.gs
